Add Swagger documentation for invoice APIs
